@@ -1,3 +1,7 @@
+2002-10-10  Miguel de Icaza  <miguel@ximian.com>
+
+	* gtk/ThreadNotify.cs: Avoid multiple notifications.
+
 2002-10-09  Miguel de Icaza  <miguel@ximian.com>
 
 	* glue/adjustment.c (gtksharp_gtk_adjustment_get_page_size): Added
